ashusamplepod.yml
apiVersion : v1
kind: Pod
metadata:
 name: ashusamplepod
 labels:
  name: myapp

spec:
 containers:
  - name: c1
    image: nginx
    ports:
     - containerPort: 80
    imagePullPolicy: IfNotPresent
