configmap1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: alpine
  name: alpine
spec:
  containers:
  - command: ["/bin/sh","-c","echo $(x) ; sleep $(y)"]
    image: alpine
    name: alpine
