configmap3.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx1
spec:
  volumes:
   - name: myvol
     configMap: 
      name: another
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
     - name: myvol
       mountPath: /etc/lala
  restartPolicy: Never
