sample.yml
---
apiVersion: v1
kind: Pod
metadata:
 name: ashusamplepod
 labels:
  name: myapp

spec:
 containers:
  - image: nginx
    name: c1
    ports:
     - containerPort: 80
    imagePullPolicy: IfNotPresent   #  this is optional
