schedule_at_create.yml
apiVersion: v1
kind: Pod
metadata:
 name: pod1
 labels:
  name: helloapp

spec:
 containers:
  - image: nginx
    name: c1
    ports:
     - containerPort: 80
    imagePullPolicy: IfNotPresent
 nodeSelector:
  name1: ssd1
 restartPolicy: Always
