ashusamplepod_servicenodeport.yml
apiVersion: v1
kind: Service
metadata:
 name: servicefirst1

spec:
 type: NodePort
 ports:
  - port: 80  #  this is the only mandatory part that is a port of service create 
 selector:
  name: myapp
