deny_all_pod_traffic1.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: deny-all-pods1
spec:
 podSelector: {}  # selecting all the pods
 policyTypes:
 - Ingress
