limit_access.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
  namespace: kube-public
spec:
  podSelector:
    matchLabels:
      app: exam  #  label of pods where we want to apply policy 
  ingress:
  - from:
      - podSelector:
          matchLabels:
            x: hello             #from this pod we can only access
