netpolicy_deny.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-deny-all
  namespace: kube-public
spec:
  podSelector:
    matchLabels:
      app: exam
  ingress: []
